--- a/views/tickets/ticket-selection_sp.hbs
+++ b/views/tickets/ticket-selection_sp.hbs
@@ -1,9 +1,9 @@
-<div id="tickets-container">
+
   <div id="info">
     <div id="movie-name"></div>
     <div id="place-time-info"><span id="cinema-name"> </span><span id="room-name"> | </span><span id="time"> | </span>
     </div>
-    <div class="tickets-movie-image"><img src="" alt="" id="movie-img"></div>
+    {{!-- <div class="tickets-movie-image"><img src="" alt="" id="movie-img"></div> --}}
     <div id="cinema-name"></div>
     <div id="movie-time"></div>
   </div>
@@ -20,7 +20,7 @@
       <option value="7">7</option>
     </select>
   </div> --}}
-
+<div id="tickets-container"> 
   <div id="chairs">
 
   </div>
