--- a/views/movie/movie-details.hbs
+++ b/views/movie/movie-details.hbs
@@ -9,7 +9,9 @@
 </div>
 {{#if videoUrl}}
 <h3>Movie trailer</h3>
-<iframe id="ytplayer" type="text/html" width="640" height="360"
-  src="https://www.youtube.com/embed/{{videoUrl}}?autoplay=0&rel=0" frameborder="0">
-</iframe>
+<div class="video-container">
+  <iframe id="ytplayer" type="text/html" width="640" height="360"
+    src="https://www.youtube.com/embed/{{videoUrl}}?autoplay=0&rel=0" frameborder="0">
+  </iframe>
+</div>
 {{/if}}
