--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -4,15 +4,15 @@
 
 body {
   padding: 50px;
-  font-family: 'Roboto Condensed', sans-serif; 
+  font-family: 'Roboto Condensed', sans-serif;
   background-color: #272727;
-  color: white; 
+  color: white;
   max-width: 1100px;
   margin: 0 auto;
 }
 
 a,
-p,  
+p,
 h4,
 h5,
 h6,
@@ -20,7 +20,8 @@ li {
   color: white;
 }
 
-h1, h3 {
+h1,
+h3 {
   color: #FE4A28;
   margin-bottom: 10px;
 }
@@ -29,7 +30,7 @@ h2 {
   color: #B5E5BF;
   margin-top: 10px;
 }
- 
+
 
 nav {
   margin-bottom: 40px;
@@ -51,10 +52,12 @@ button a {
 button {
   padding: 10px;
   background-color: #FE4A28;
-  border: 1px solid black; 
+  border: 1px solid black;
   color: white;
+  cursor: pointer;
+
 }
- 
+
 .error-message {
   background-color: rgb(233, 122, 122);
   padding: 10px;
@@ -77,18 +80,22 @@ button {
   flex-wrap: wrap;
   justify-content: space-around;
 }
+
 .movie-overview {
   display: flex;
   margin: 20px 0;
   background-color: black;
 }
+
 .movie-overview-text {
   width: 200px;
   margin: 0 20px;
 }
+
 .movie-overview-button-mobile {
   display: none;
 }
+
 // movie overview page - end
 // ----------------------------
 
@@ -117,6 +124,7 @@ button {
 #datePickerContainer {
   margin-bottom: 20px;
 }
+
 #datePickerContainer-mobile-div {
   display: none;
 }
@@ -196,7 +204,7 @@ button {
 
 .booked {
   background-color: #FE4A28;
-} 
+}
 
 #info {
   display: flex;
@@ -207,14 +215,14 @@ button {
 }
 
 #screen {
-  height: 20px; 
-  width: 200px; 
+  height: 20px;
+  width: 200px;
   background-color: #B5E5BF;
   margin: 20px auto;
   color: black;
   font-weight: bold;
   text-align: center;
-  
+
 }
 
 #legend {
@@ -242,13 +250,14 @@ button {
 
 #reservation {
   margin-top: 40px;
-  display:flex;
-  flex-direction: column; 
+  display: flex;
+  flex-direction: column;
 }
- 
+
 #book-movie {
   margin-top: 20px;
 }
+
 // --- end Tickets / seatplan -----
 
 // Screening view of user
@@ -276,7 +285,7 @@ button {
 
 a.buttonTime {
   float: left;
-  background-color: #FE4A28; 
+  background-color: #FE4A28;
   padding: 5px 15px;
   margin: 5px;
   text-decoration: none;
@@ -296,43 +305,48 @@ a.buttonTime:hover {
   margin: 20px 0;
 }
 
-footer span, .header-authentication span {
+footer span,
+.header-authentication span {
   margin: 0px 5px;
 }
 
 
 
 // footer
-footer { 
+footer {
   display: flex;
-  justify-content: center; 
-  background-color: #FE4A28; 
+  justify-content: center;
+  background-color: #FE4A28;
   padding: 10px;
   margin-top: 20px;
   // position: sticky;
-  bottom: 20px;   
+  bottom: 20px;
 }
 
 // -- start Cinema overview ---------------
 .cinema-overview-container {
   margin: 30px 0;
 }
+
 .cinema-overview-address {
-  margin-top: 0; 
+  margin-top: 0;
 }
+
 .cinema-overview-container h2 {
   margin-bottom: 0px;
 }
+
 // -- end Cinema overview --------------
 
 footer a {
   color: black;
   text-decoration: none;
-} 
+}
 
 footer span {
   color: black;
 }
+
 // Header
 header {
   display: flex;
@@ -340,20 +354,21 @@ header {
   justify-content: space-between;
 }
 
-.header-authentication {  
+.header-authentication {
   margin-bottom: 10px;
   color: #FE4A28;
 }
 
 .header-authentication a {
   text-decoration: none;
-} 
+}
 
 
 .header-menu {
   display: flex;
-  margin-bottom: 20px; 
+  margin-bottom: 20px;
 }
+
 .header-menu a {
   background-color: #CCD4E1;
   color: black;
@@ -369,15 +384,17 @@ header {
 
 .header-menu-mobile a:hover {
   background-color: #FE4A28;
-} 
+}
 
 // --- start Forms ---
 .formContainer {
-  display : flex;
+  display: flex;
   flex-wrap: nowrap;
   margin-bottom: 20px;
 }
-label, input {
+
+label,
+input {
   display: block;
   margin: 5px 0;
 }
@@ -389,9 +406,11 @@ label, input {
 label {
   margin-right: 10px;
 }
+
 ::placeholder {
   color: rgb(175, 174, 174);
 }
+
 // -- end Forms -----
 
 .video-container {
@@ -399,27 +418,132 @@ label {
   padding-bottom: 56.25%;
   height: 0;
   overflow: hidden;
-  }
-  .video-container iframe  {
+}
+
+.video-container iframe {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%; 
+  width: 100%;
   height: 100%;
-  }
+}
+
+//-- password progress bar ---
+
+progress {
+  /* Reset the default appearance */
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+
+  /* Get rid of default border in Firefox. */
+  border: none;
+
+  /* Dimensions */
+  width: 180px;
+  height: 10px;
+}
+
+.progress-20 {
+  color: red;
+}
+
+.progress-20::-webkit-progress-value {
+  background-color: red;
+}
+
+.progress-20::-moz-progress-bar {
+  background-color: red;
+}
+
+.progress-40 {
+  color: coral;
+}
+
+.progress-40::-webkit-progress-value {
+  background-color: coral
+}
+
+.progress-40::-moz-progress-bar {
+  background-color: coral;
+}
+
+.progress-60 {
+  color: orange;
+}
+
+.progress-60::-webkit-progress-value {
+  background-color: orange
+}
+
+.progress-60::-moz-progress-bar {
+  background-color: orange;
+}
+
+.progress-80 {
+  color: yellow;
+}
+
+.progress-80::-webkit-progress-value {
+  background-color: yellow
+}
+
+.progress-80::-moz-progress-bar {
+  background-color: yellow;
+}
+
+.progress-90 {
+  color: greenyellow;
+}
+
+.progress-90::-webkit-progress-value {
+  background-color: greenyellow
+}
+
+.progress-90::-moz-progress-bar {
+  background-color: greenyellow;
+}
+
+.progress-100 {
+  color: green;
+}
+
+.progress-100::-webkit-progress-value {
+  background-color: green
+}
+
+.progress-100::-moz-progress-bar {
+  background-color: green;
+}
+//--end  progress bar --
+
+
+
+//--button on signup.hbs start--
+#signup:disabled {
+  background-color: grey;
+}
+
+#changePassword:disabled {
+  background-color: grey;
+}
+//button on signup.hbs end --
+
+
 
 @media screen and (min-width: 701px) {
   header {
     align-items: center;
-  } 
+  }
 }
 
 @media screen and (min-width: 601px) and (max-width: 700px) {
   header {
     display: flex;
-    flex-direction: column; 
+    flex-direction: column;
   }
-  .header-authentication { 
+
+  .header-authentication {
     align-self: flex-end;
   }
 }
@@ -434,8 +558,9 @@ label {
 @media screen and (min-width: 800px) {
   .col {
     width: 40px;
-    height: 40px; 
+    height: 40px;
   }
+
   #tickets-container {
     justify-content: space-around;
   }
@@ -446,10 +571,11 @@ label {
   .header-authentication a {
     font-size: 130%;
   }
-  .video-container iframe  { 
-    width: 70%; 
+
+  .video-container iframe {
+    width: 70%;
     height: 70%;
-    }
+  }
 }
 
 // Media queries Movie < 480px
@@ -457,28 +583,35 @@ label {
   header {
     flex-direction: column;
   }
-  body { 
+
+  body {
     padding: 20px;
   }
+
   // hide menu and the nav border for buttons
   .header-menu {
     display: none;
   }
-  .header-authentication { 
+
+  .header-authentication {
     align-self: flex-end;
   }
+
   .header-menu-mobile {
     display: flex;
     justify-content: space-between;
     background-color: #CCD4E1;
     margin-bottom: 10px;
   }
+
   nav a {
     border: none;
-  } 
+  }
+
   .glide__arrows {
     display: none;
   }
+
   // movies
   .movie-overview {
     width: 100%;
@@ -486,57 +619,71 @@ label {
     justify-content: center;
     padding: 20px 0;
   }
-  .movie-overview-poster { 
+
+  .movie-overview-poster {
     margin: auto;
   }
+
   .movie-overview-text {
-    display: none; 
-  }  
+    display: none;
+  }
+
   .movie-overview-button-mobile {
-    display: inline-block; 
+    display: inline-block;
     width: 150px;
     margin: auto;
   }
+
   .movie-details-poster {
     display: none;
   }
+
   // cinema
-  #map { 
+  #map {
     height: 200px;
   }
+
   // screening
   #datePickerContainer {
     display: none;
   }
+
   #datePickerContainer-mobile-div {
     display: block;
     margin-bottom: 20px;
   }
+
   .screening-poster {
     max-width: 100px;
   }
+
   .movieTimesTimes h3 {
-    display: none; 
+    display: none;
   }
+
   .movieTimesTimes {
     margin: auto 0;
   }
+
   .movieTimesContainer {
     width: 100%;
   }
+
   // seat plan
   #tickets-container {
     flex-direction: column;
   }
+
   #chairs {
     width: 100%;
     height: auto;
   }
+
   #reservation h2 {
     margin: 20px 0 10px 0;
   }
+
   .row {
     justify-content: center;
   }
 }
- 
