--- a/views/admin/admin-home.hbs
+++ b/views/admin/admin-home.hbs
@@ -12,7 +12,7 @@
 <div>
   <div style="font-size:20px;">{{name}}</div>
   <button class="edit-cinema"><a href="/admin/edit-cinema/{{id}}">EDIT</a></button>
-  <a href="/admin/add-screening/{{id}}/">create screening</a>
+   <button><a href="/admin/add-screening/{{id}}/">create screening</a></button>
   {{!-- </form> --}}
 
 </div><br>
