--- a/views/tickets/ticket-selection_sp.hbs
+++ b/views/tickets/ticket-selection_sp.hbs
@@ -1,35 +1,23 @@
-
-  <div id="info">
-    <div id="movie-name"></div>
-    <div id="place-time-info"><span id="cinema-name"> </span><span id="room-name"> | </span><span id="time"> | </span>
-    </div>
-    {{!-- <div class="tickets-movie-image"><img src="" alt="" id="movie-img"></div> --}}
-    <div id="cinema-name"></div>
-    <div id="movie-time"></div>
+<div id="info">
+  <div id="movie-name"></div>
+  <div id="place-time-info"><span id="cinema-name"> </span><span id="room-name"> | </span><span id="time"> | </span>
   </div>
+  <div id="cinema-name"></div>
+  <div id="movie-time"></div>
+</div>
 
-  {{!-- <div id="tickets">
-    <label for="ticket-number">Number of tickets:</label>
-    <select name="ticket-number" id="ticket-number">
-      <option value="1">1</option>
-      <option value="2">2</option>
-      <option value="3">3</option>
-      <option value="4">4</option>
-      <option value="5">5</option>
-      <option value="6">6</option>
-      <option value="7">7</option>
-    </select>
-  </div> --}}
-<div id="tickets-container"> 
+
+<div id="tickets-container">
   <div id="chairs">
 
   </div>
 
   <div id="reservation">
     <h2>Your order - <span id="number-of-tickets">0</span> ticket(s)</h2>
- 
+
     <div id="selected-seats"></div>
-    <div><button id="book-movie" type="submit">MAKE RESERVATION</button></div>
+    <div><button id="book-movie" type="submit">make reservation</button></div>
+
   </div>
 
 </div>
