--- a/views/admin/cinema-to-add.hbs
+++ b/views/admin/cinema-to-add.hbs
@@ -17,12 +17,11 @@
     <input type="text" name="owner" id="owner"><br>
     <label for="city">City</label>
     <input type="text" name="city" id="city"><br>
+    {{!--readonly element values are visible in req.body, but disabled elements not  --}}
     <label for="latitude">Latitude</label>
-    <input type="text" name="latitude" placeholder="latitude">
+    <input type="text" name="latitude" id="latitude" placeholder="latitude" readonly="readonly">
     <label for="longitude">Longitude</label>
-    <input type="text" name="longitude" placeholder="longitude">
-
-
+    <input type="text" name="longitude" id="longitude" placeholder="longitude" readonly="readonly">
   </div>
 
   <br>
@@ -49,16 +48,10 @@
     <div>
       <h2>Rooms</h2>
     </div>
-
   </div>
-
-
-
   <br>
-
-
   <input type="submit" value="ADD CINEMA">
-
 </form>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQpT4J3WNKmNaE4gDHqBLm1ma2nUcUkkI"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBw4ZAYG-ue3X4umVCsDlcqENPadb6t3Tk"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="/javascripts/cinema-to-add.js"></script>
