--- a/views/profile/edit-password.hbs
+++ b/views/profile/edit-password.hbs
@@ -10,11 +10,16 @@
     <div class="formInput">
       <input id="password" type="password" name="password" required>
       <input id="new-password" type="password" name="newPassword" required>
+      <progress id="strength" max="100" value="0"></progress>
     </div>
+
   </div>
+
   {{#if message }}
   <div class="error-message">{{ message }}</div>
   {{/if}}
 
-  <button>Confirm change</button>
+  <button id="changePassword" disabled>Confirm change</button>
 </form>
+
+<script src="/javascripts/edit-password.js"></script>
